--- a/solar-system/kubernetes/development/service.yaml
+++ b/solar-system/kubernetes/development/service.yaml
@@ -7,7 +7,8 @@ metadata:
   namespace: solar-system
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
     protocol: TCP
     targetPort: 80
   selector:
