--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,9 @@ solar-system.png
 .talismanrc
 coverage
 test-results.xml
+#ArgoCD
+declarative/geocentric-app.yml
+declarative/mono-app.yml
+declarative/mono-app.yml
+
+jenkins-demo@tmp
