ArgoCD Project code added

--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -11,15 +11,14 @@ on:
 env:
   AWS_REGION: ap-south-1
   ECR_REPOSITORY: solar-system
-  GITOPS_PATH: solar-system/kubernetes/development       # Adjust path where your Kubernetes manifests are located
-  MANIFEST_FILE: deployment.yaml         # Deployment manifest file name
+  GITOPS_PATH: solar-system/kubernetes/development
+  MANIFEST_FILE: deployment.yaml
 
 jobs:
   build-and-deploy:
     runs-on: [self-hosted, linux, qa]
     env:
       NAME: solar-system
-      IMAGE_REPO: ${{ env.ECR_REPOSITORY }}
 
     steps:
       # 1. Checkout repository (code + manifests)
@@ -33,16 +32,15 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'  # Change to your required PHP version
-          extensions: mbstring, xml, curl  # Add extras as needed
+          php-version: '8.1'
+          extensions: mbstring, xml, curl
 
       - name: Install Composer dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       # 3. Run unit tests with PHPUnit
       - name: Run Unit Tests with PHPUnit
-        run: |
-          vendor/bin/phpunit --configuration phpunit.xml
+        run: vendor/bin/phpunit --configuration phpunit.xml
 
       # 4. Configure AWS credentials via OIDC
       - name: Configure AWS credentials (OIDC)
@@ -63,23 +61,28 @@ jobs:
           IMAGE_TAG="${{ env.NAME }}-${{ github.run_id }}-${GITHUB_SHA::7}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      # 7. Build and push Docker image to ECR
+      # 7. Set IMAGE_REPO (moved here to avoid invalid syntax)
+      - name: Set IMAGE_REPO
+        run: echo "IMAGE_REPO=${{ env.ECR_REPOSITORY }}" >> $GITHUB_ENV
+
+      # 8. Build and push Docker image to ECR
       - name: Build and push Docker image to ECR
         run: |
-          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${IMAGE_TAG}
+          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_REPO }}:${IMAGE_TAG}
           echo "Building image $IMAGE_URI"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
-      # 8. Update Kubernetes manifest with new image tag
+      # 9. Update Kubernetes manifest with new image tag
       - name: Update Kubernetes manifest with new image
         run: |
+          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_REPO }}:${IMAGE_TAG}
           echo "Updating manifest with new image $IMAGE_URI"
           cd $GITOPS_PATH
           sed -i "s#image: .*#image: $IMAGE_URI#g" $MANIFEST_FILE
           cat $MANIFEST_FILE
 
-      # 9. Commit & push manifest changes to GitHub
+      # 10. Commit & push manifest changes to GitHub
       - name: Commit & Push manifest updates
         run: |
           cd $GITOPS_PATH
