--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -21,51 +21,55 @@ jobs:
       NAME: solar-system
 
     steps:
-      # 1. Checkout repository (code + manifests)
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      # 2. Set up PHP and install dependencies
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
+      # 2. Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          php-version: '8.1'
-          extensions: mbstring, xml, curl
+          node-version: '20'
 
-      - name: Install Composer dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      # 3. Install Node.js dependencies
+      - name: Install NPM dependencies
+        run: npm install
 
-      # 3. Run unit tests with PHPUnit
-      - name: Run Unit Tests with PHPUnit
-        run: vendor/bin/phpunit --configuration phpunit.xml
+      # 4. Run Unit Tests with Mocha
+      - name: Run Unit Tests with Mocha
+        run: npm test
 
-      # 4. Configure AWS credentials via OIDC
+      # Optional: Run code coverage if needed
+      - name: Run Code Coverage
+        run: npm run coverage
+
+      # 5. Configure AWS credentials (OIDC)
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 5. Log in to Amazon ECR
+      # 6. Log in to Amazon ECR
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # 6. Set image tag
+      # 7. Set image tag
       - name: Set image tag
         id: meta
         run: |
           IMAGE_TAG="${{ env.NAME }}-${{ github.run_id }}-${GITHUB_SHA::7}"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      # 7. Set IMAGE_REPO (moved here to avoid invalid syntax)
+      # 8. Set IMAGE_REPO
       - name: Set IMAGE_REPO
         run: echo "IMAGE_REPO=${{ env.ECR_REPOSITORY }}" >> $GITHUB_ENV
 
-      # 8. Build and push Docker image to ECR
+      # 9. Build and push Docker image to ECR
       - name: Build and push Docker image to ECR
         run: |
           IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_REPO }}:${IMAGE_TAG}
@@ -73,7 +77,7 @@ jobs:
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
-      # 9. Update Kubernetes manifest with new image tag
+      # 10. Update Kubernetes manifest with new image tag
       - name: Update Kubernetes manifest with new image
         run: |
           IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_REPO }}:${IMAGE_TAG}
@@ -82,7 +86,7 @@ jobs:
           sed -i "s#image: .*#image: $IMAGE_URI#g" $MANIFEST_FILE
           cat $MANIFEST_FILE
 
-      # 10. Commit & push manifest changes to GitHub
+      # 11. Commit & Push manifest updates
       - name: Commit & Push manifest updates
         run: |
           cd $GITOPS_PATH
