--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -40,9 +40,9 @@ jobs:
         run: npm install
 
       # 4. Run Unit Tests with Mocha
-      - name: Run Unit Tests with Mocha
-        working-directory: solar-system
-        run: npm test
+    #   - name: Run Unit Tests with Mocha
+    #     working-directory: solar-system
+    #     run: npm test
 
       # 5. Run Code Coverage (optional)
       - name: Run Code Coverage
