--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -8,6 +8,11 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  actions: write
+
 env:
   AWS_REGION: ap-south-1
   ECR_REPOSITORY: solar-system
