--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -95,12 +95,15 @@ jobs:
           sed -i "s#image: .*#image: $IMAGE_URI#g" $MANIFEST_FILE
           cat $MANIFEST_FILE
 
-      # 12. Commit & Push manifest updates
-      - name: Commit & Push manifest updates
+     # 12. Commit & Push manifest updates
+        - name: Commit & Push manifest updates
+        env:
+            GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          cd $GITOPS_PATH
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add $MANIFEST_FILE
-          git commit -m "ci: Update image to $IMAGE_URI [skip ci]" || echo "No changes to commit"
-          git push origin HEAD:${GITHUB_REF#refs/heads/}
+            cd $GITOPS_PATH
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
+            git add $MANIFEST_FILE
+            git commit -m "ci: Update image to $IMAGE_URI [skip ci]" || echo "No changes to commit"
+            git push origin HEAD:${GITHUB_REF#refs/heads/}
