ArgoCD Project code added

--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -3,7 +3,7 @@ name: ArgoCd-Solar System CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - master
       - develop
   workflow_dispatch:
 
