--- a/solar-system/kubernetes/development/deployment.yaml
+++ b/solar-system/kubernetes/development/deployment.yaml
@@ -24,6 +24,6 @@ spec:
         - containerPort: 80
           name: http
           protocol: TCP
-        # envFrom:
-        # - secretRef:
-        #     name: mongo-db-creds
+        envFrom:
+        - secretRef:
+            name: mongo-db-creds
