ArgoCD Project code added

--- a/app/frontend-src/default.conf
+++ b/app/frontend-src/default.conf
@@ -8,6 +8,6 @@ server {
     }
 
     location /products/ {
-        proxy_pass http://productssvc.develop.svc/products/;
+        proxy_pass http://productssvc.develop.svc:8080/products/;
     }
 }
