--- a/.github/workflows/ArgoCD-Ci-CD.yml
+++ b/.github/workflows/ArgoCD-Ci-CD.yml
@@ -1,10 +1,10 @@
 name: ArgoCD-Solar-System CI-CD Pipeline
 
 on:
-  push:
-    branches:
-      - master
-      - develop
+  # push:
+  #   branches:
+  #     - master
+  #     - develop
   workflow_dispatch:
 
 permissions:
