--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,6 +2,11 @@ name: Playwright CI
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - develop
+    paths:
+      - 'playwright_automation/**'
 
 permissions:
   id-token: write
@@ -9,67 +14,33 @@ permissions:
   actions: write
 
 jobs:
-  build:
+  playwright-tests:
     runs-on: [self-hosted, linux, qa]
 
+    defaults:
+      run:
+        working-directory: playwright_automation
+
     steps:
-      # Checkout source code
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Setup Node.js (latest LTS)
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
           cache: 'npm'
+          cache-dependency-path: playwright_automation/package-lock.json
 
-      # Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      # Install Playwright browsers (only Chrome in this case)
-      - name: Install Playwright (Chrome only)
-        run: npx playwright install --with-deps chrome
-
-      # Run Playwright tests
       - name: Run Playwright tests
-        run: npm run test-single
+        run: npx playwright test
 
-      # Upload Allure results as artifact
-      - name: Upload Allure results
+      - name: Upload Playwright report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
-          path: allure-results
-          retention-days: 20
-
-      # Checkout gh-pages branch to get Allure history
-      - name: Get Allure history
-        if: always()
-        continue-on-error: true
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      # Generate Allure report
-      - name: Generate Allure report
-        if: always()
-        id: allure-report
-        uses: simple-elf/allure-report-action@master
-        with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
-          keep_reports: 20
-
-      # Deploy Allure report to GitHub Pages
-      - name: Deploy report to GitHub Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+          name: playwright-report
+          path: playwright_automation/playwright-report
