added playwright_automation project

--- a/playwright_automation/env/dev.env
+++ b/playwright_automation/env/dev.env
@@ -1,3 +1,4 @@
+TEST_ENVIRONMENT=dev
 CLAS_WEB_URL=https://worldbook.instructure.com
 CLAS_USERNAME=hrushikeshg@cybage.com
 CLAS_PASSWORD=Cybage@123
