--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,25 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+
+
+
+#React Application
+# dependencies
+/node_modules
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
