AWS Amplify CI-CD testing

--- a/.github/workflows/Amplify-deploy.yml
+++ b/.github/workflows/Amplify-deploy.yml
@@ -4,9 +4,8 @@ name: Deploy to Amplify
 on:
   push:
     branches:
-      - develop
- 
-  workflow_dispatch:  # Manual trigger
+      - develop   # auto-deploy on develop branch
+  workflow_dispatch:  # allow manual trigger
 
 # Permissions for OIDC
 permissions:
@@ -14,7 +13,7 @@ permissions:
   id-token: write
 
 env:
-  AWS_REGION: ap-south-1  # Set your AWS region
+  AWS_REGION: ap-south-1  # your AWS region
 
 jobs:
   deploy:
@@ -27,22 +26,33 @@ jobs:
 
       # Step 2: Configure AWS credentials (OIDC)
       - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # Step 3: Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
+      # Step 4: Install dependencies (ci if lock file exists, else install)
       - name: Install dependencies
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ]; then
+            echo "Using npm ci (lock file found)"
+            npm ci
+          else
+            echo "No lock file found, falling back to npm install"
+            npm install
+          fi
 
+      # Step 5: Build React app
       - name: Build React app
         run: npm run build
 
+      # Step 6: Deploy to Amplify
       - name: Deploy to Amplify
         run: |
           aws amplify start-job \
