--- a/.github/workflows/Amplify-deploy.yml
+++ b/.github/workflows/Amplify-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Amplify
 on:
   push:
     branches:
-      - develop   # auto-deploy on develop branch
+      - develop   # auto-deploy only on develop branch
   workflow_dispatch:  # allow manual trigger
 
 permissions:
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 env:
-  AWS_REGION: ap-south-1  # your AWS region
+  AWS_REGION: ap-south-1
 
 jobs:
   deploy:
@@ -19,7 +19,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: family-helper  # 👈 change to your app folder
+        working-directory: family-helper  # 👈 adjust to your app folder
 
     steps:
       # Step 1: Checkout repo
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Configure AWS credentials (OIDC)
-      - name: Configure AWS credentials (OIDC)
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
@@ -39,14 +39,12 @@ jobs:
         with:
           node-version: '18'
 
-      # Step 4: Install dependencies (ci if lock file exists, else install)
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: |
           if [ -f package-lock.json ]; then
-            echo "Using npm ci (lock file found)"
             npm ci
           else
-            echo "No lock file found, falling back to npm install"
             npm install
           fi
 
@@ -54,22 +52,24 @@ jobs:
       - name: Build React app
         run: npm run build
 
-      # Step 6: Trigger Amplify deploy
-      - name: Start Amplify Job
+      # Step 6: Trigger Amplify Deployment
+      - name: Trigger Amplify Job
         id: amplify
         run: |
           JOB_ID=$(aws amplify start-job \
             --app-id ${{ secrets.AMPLIFY_APP_ID }} \
             --branch-name ${{ secrets.AMPLIFY_BRANCH_NAME }} \
             --job-type RELEASE \
+            --commit-id $GITHUB_SHA \
+            --commit-message "Deployed via GitHub Actions: $GITHUB_SHA" \
             --query "jobSummary.jobId" \
             --output text)
 
           echo "JOB_ID=$JOB_ID" >> $GITHUB_ENV
           echo "Triggered Amplify job with ID: $JOB_ID"
 
-      # Step 7: Wait for Amplify job to finish
-      - name: Wait for Amplify Job to Finish
+      # Step 7: Wait for Amplify Job Completion
+      - name: Wait for Amplify Job
         run: |
           while true; do
             STATUS=$(aws amplify get-job \
