--- a/.github/workflows/Deploy to AWS ECS.yml
+++ b/.github/workflows/Deploy to AWS ECS.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ecs-task-def.json
+          task-definition: python_crypto_app/ecs-task-def.json
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: true
