Added Python Project

--- a/.github/workflows/Deploy to AWS ECS.yml
+++ b/.github/workflows/Deploy to AWS ECS.yml
@@ -34,16 +34,27 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, Tag & Push Docker Image
+        id: build-image
         run: |
           IMAGE_TAG=latest
           cd $WORK_DIR
-          docker build -t ${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG .
-          docker push ${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          IMAGE_URI=${{ secrets.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          docker build -t $IMAGE_URI .
+          docker push $IMAGE_URI
+
+      - name: Render Amazon ECS task definition
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: python_crypto_app/ecs-task-def.json
+          container-name: crypto-app
+          image: ${{ env.IMAGE_URI }}
 
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: python_crypto_app/ecs-task-def.json
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: true
