--- a/.github/workflows/OIDC-testing.yml
+++ b/.github/workflows/OIDC-testing.yml
@@ -1,17 +1,14 @@
 name: Create S3 Bucket with OIDC
 
 on:
-  workflow_dispatch:   # run manually
-  push:
-    branches:
-      - develop        # or change to your branch
+  workflow_dispatch:   
 
 jobs:
   create-bucket:
-    runs-on: [self-hosted, linux, qa]   # 👈 this ensures your EC2 runner is used
+    runs-on: [self-hosted, linux, qa]   
     permissions:
-      id-token: write      # 👈 required for OIDC
-      contents: read       # 👈 required for actions/checkout
+      id-token: write      # ✅ Required for OIDC
+      contents: read       # ✅ Required for actions/checkout
 
     steps:
       - name: Checkout repository
@@ -20,14 +17,14 @@ jobs:
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::355511498283:role/github-actions-role
-          aws-region: us-east-1   # change region if needed
+          role-to-assume: arn:aws:iam::355511498283:role/github-actions-role  
+          aws-region: us-east-1  
 
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
       - name: Create S3 bucket
         run: |
-          BUCKET_NAME=my-oidc-demo-$(date +%s)
+          BUCKET_NAME="my-oidc-demo-$(date +%s)"
           echo "Creating bucket: $BUCKET_NAME"
           aws s3 mb s3://$BUCKET_NAME --region us-east-1
